# steroids-openai-image-gen

./: .gitignore  LICENSE  README.md  __init__.py  plugin.yaml  pyproject.toml
scripts/: probe_edits_only.py  probe_endpoint.py
steroids_openai_image_gen/: __init__.py  background.py  codex_auth.py  config.py  openai_compatible.py  provider.py  refs.py  tool_override.py
tests/: test_core.py
